// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login/> renders <Login /> component 1`] = `
<Fragment>
  <h1>
    <FontAwesome
      name="user-circle-o"
    />
     Please, login
  </h1>
  <ForwardRef(Bootstrap(Form))
    noValidate={true}
    onSubmit={[MockFunction]}
  >
    <Field
      component={[Function]}
      htmlFor="identifier"
      label="Username / Email*:"
      name="identifier"
      placeholder="Type your Username or Email"
      type="text"
    />
    <Field
      component={[Function]}
      label="Password*:"
      name="password"
      placeholder="Come up with a password"
      type="password"
    />
    <ForwardRef(Bootstrap(FormGroup))>
      <Link
        replace={false}
        to="/login/forgot"
      >
        Forgot password?
      </Link>
    </ForwardRef(Bootstrap(FormGroup))>
    <ForwardRef(Bootstrap(Button))
      disabled={false}
      size="lg"
      type="submit"
      variant="primary"
    >
      Login 
      <FontAwesome
        name="sign-in"
      />
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(Form))>
</Fragment>
`;

exports[`<Login/> renders <Login /> component with error state 1`] = `
<Fragment>
  <h1>
    <FontAwesome
      name="user-circle-o"
    />
     Please, login
  </h1>
  <ForwardRef(Bootstrap(Form))
    noValidate={true}
    onSubmit={[MockFunction]}
  >
    <ForwardRef
      variant="danger"
    >
      Test Error
    </ForwardRef>
    <Field
      component={[Function]}
      htmlFor="identifier"
      label="Username / Email*:"
      name="identifier"
      placeholder="Type your Username or Email"
      type="text"
    />
    <Field
      component={[Function]}
      label="Password*:"
      name="password"
      placeholder="Come up with a password"
      type="password"
    />
    <ForwardRef(Bootstrap(FormGroup))>
      <Link
        replace={false}
        to="/login/forgot"
      >
        Forgot password?
      </Link>
    </ForwardRef(Bootstrap(FormGroup))>
    <ForwardRef(Bootstrap(Button))
      disabled={false}
      size="lg"
      type="submit"
      variant="primary"
    >
      Login 
      <FontAwesome
        name="sign-in"
      />
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(Form))>
</Fragment>
`;
